2013-11-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.9 release procedure:
 	Changes since nco-4_3_8: nces, XML
	cd ~/nco;cvs tag -d nco-4_3_9;cvs tag -d nco-4_3_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.9 release"
	cvs tag -c nco-4_3_9;cvs tag -c nco-4_3_9-1

	* XML mode print non-whitespace separators for 1D character array attributes

	* XML mode print non-whitespace separators for scalar strings for brain-dead programs

2013-11-18  Charlie Zender  <zender@uci.edu>

	* Neaten XML indentation

	* Add more backwards-incompatible members to buggy.cdl

	* XML mode use stub-name not full name in group name element

2013-11-16  Charlie Zender  <zender@uci.edu>

	* Omit XML default _FillValue when variable already has _FillValue

	* Eliminate all quotes from <values> elements

	* XML mode add default _FillValue attribute for unsigned variable types

	* XML mode add _Unsigned attribute for unsigned variable types

	* XML mode use xml_typ_nm() instead of cdl_typ_nm()

2013-11-15 Pedro Vicente  <pvicente@uci.edu>

	* nces: Regression #3 file ensemble with GPE

2013-11-15  Charlie Zender  <zender@uci.edu>

	* Add XML non-whitespace separator to multi-dimensional NC_CHAR variables

2013-11-13  Charlie Zender  <zender@uci.edu>

	* Numerous XML fixes spurred by Aleksandar Jelenak report:

	* Make XML separator configurable via ncks --xml_spr_chr, --xml_spr_nmr

	* Fix printf() format string for NC_INT64 in nco_typ_fmt_sng_att_xml()

	* Close content-less <variable> elements with "/>" not ">" (in contrast to ncdump -x, toolsui)

	* Add separator=", " attribute for non-whitespace separators

	* Add type="cdl_typ_nm" attribute to non-string attribute elements

	* XML print </variable> in metadata mode

2013-11-13 Pedro Vicente  <pvicente@uci.edu>

	* nces: Regression #1, #2. 1 file ensembles, with --nsm_sfx

2013-11-10  Charlie Zender  <zender@uci.edu>

	* nces first stab at --nsm_sfx switch. Must place in nco_xtr_mk() too.

2013-11-06  Charlie Zender  <zender@uci.edu>
